--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "homepage":"https://evan-roberts-808.github.io/Smart-Brain-Terminal/",
+  "homepage": "https://evan-roberts-808.github.io/Smart-Brain-Terminal/",
   "name": "smart-brain-terminal",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
     "-": "^0.0.1",
     "gh-pages": "^4.0.0",
+    "nth-check": ">=2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^2.1.0",
@@ -13,15 +14,14 @@
     "react-tilt": "^0.1.4",
     "save-dev": "^0.0.1-security",
     "serve": "^14.2.0",
-    "tachyons": "^4.12.0",
-    "nth-check": ">=2.0.1"
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build", 
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "browserslist": {
