--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "homepage": "https://evan-roberts-808.github.io/Smart-Brain-Terminal/",
+  "homepage": "https://evan-roberts-808.github.io/Smart-Brain-Terminal",
   "name": "smart-brain-terminal",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
     "-": "^0.0.1",
-    "gh-pages": "^4.0.0",
     "nth-check": ">=2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,11 +17,11 @@
   },
   "scripts": {
     "start": "serve -s build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
@@ -35,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
